--- a/Node-master/Node-master/NodeJS-Recreation-master (2)/NodeJS-Recreation-master/Node.html
+++ b/Node-master/Node-master/NodeJS-Recreation-master (2)/NodeJS-Recreation-master/Node.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="Node.css"
-    <title>Node.js</title>
+    <title></title>
   </head>
   <body>
-  <header>
-    <div>
-      <img src="https://nodejs.org/static/images/logo.svg">
-    </div>
-    <div class="conteiner">
-    </div>
+
   </body>
 </html>
